# Sprocket

./: README.md  capacitor.config.ts  metadata.json  package-lock.json  package.json  vite.config.ts
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  llamacpp_jni.cpp
android/app/src/main/java/com/sprocket/app/: LlamaCPPPlugin.java  MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: App.tsx
src/components/: Chat.tsx  DangerRoom.tsx  Extensions.tsx  GoosePen.tsx  LocalInference.tsx  MemoryCodex.tsx  PeckingStation.tsx  Settings.tsx  VendingMachine.tsx
src/engine/: EmbeddingEngine.ts  NativeBridge.ts  PromptArchitect.ts  SprocketEngine.ts  VaultGardener.ts  VendingMachineEngine.ts  seedData.ts  worker.ts
src/lib/: gemini.ts
src/plugins/: SprocketEngine.ts
src/services/: DangerRoomEngine.ts  InferenceRouter.ts
